# blog

./: .gitignore  Makefile  README.md  about.markdown  default.nix  index.html  push  release.nix  seba-blog.cabal  shell.nix  site.hs
code/why-is-applicative-more-efficient-than-monad/: Main.hs  array.html  blog.cabal  shell.nix
css/: default.css  syntax.css
posts/: 2015-12-21-why-is-applicative-more-efficient-than-monad.markdown  2015-12-26-beautiful-power-series.markdown  2015-12-27-diverse-readings.markdown
posts/2015-12-21-why-is-applicative-more-efficient-than-monad/: index.markdown
posts/2015-12-21-why-is-applicative-more-efficient-than-monad/code/: LICENSE  Main.hs  array.html  blog-profiling.hp  blog-profiling.prof  shell.nix
posts/2015-12-26-beautiful-power-series/: index.markdown
posts/2015-12-27-diverse-readings/: index.markdown
posts/2015-12-28-an-exercise-on-monoids/: index.markdown
posts/2015-12-28-an-exercise-on-monoids/code/: shell.nix  sorted.hs
posts/2016-01-08-misunderstanding-conways-law/: index.markdown
posts/2017-01-21-traversable-shape-contents/: index.markdown
posts/2017-01-21-traversable-shape-contents/code/: run-and-watch  shape-contents.hs
posts/2017-10-08-our-own-mutable-variables/: index.lhs
posts/2018-06-01-monoids-talk-at-scaladores/: index.markdown
posts/2018-06-02-an-exercise-on-applicatives/: index.lhs
templates/: default.html  post-comments.html  post-list.html  post.html
