name:               seba-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base < 5
                  , time
                  , filepath
                  , containers
                  --, hakyll == 4.7.*
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
